--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -131,9 +131,6 @@
   }
 }
 
-/**
- * Base typography. This is not applied to elements which have an ancestor with a Tailwind text class.
- */
 @layer base {
   :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) {
     h1 {
@@ -188,4 +185,13 @@
 
 html {
   font-size: var(--font-size);
+}
+
+html {
+  scrollbar-gutter: stable both-edges;
+}
+
+
+body {
+  overflow-y: auto;
 }
